--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>We are the Champions</h1>
+    <div class="container">
+        <div class="main">
+            <img src="assets/freddie.png">
+            <h1>We are the Champions</h1>
+            <textarea name="text" id="text"></textarea>
+            <button>Publish</button>
+        </div>
+        <div class="endorsements">
+            <h4>- Endorsements -</h4>
+
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
