add placeholder in text area

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main">
             <img src="assets/freddie.png">
             <h1>We are the Champions</h1>
-            <textarea name="text" id="text"></textarea>
+            <textarea name="text" id="text" placeholder="Write your endorsement here"></textarea>
             <button>Publish</button>
         </div>
         <div class="endorsements">
