--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -15,13 +16,13 @@
             <img src="assets/freddie.png">
             <h1>We are the Champions</h1>
             <textarea name="text" id="text" placeholder="Write your endorsement here"></textarea>
-            <button>Publish</button>
+            <button id="btn">Publish</button>
         </div>
-        <div class="endorsements">
+        <div id="endorsements" class="endorsements">
             <h4>- Endorsements -</h4>
-
+            <p>hi</p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
