--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <textarea name="text" id="text" placeholder="Write your endorsement here"></textarea>
             <button id="btn">Publish</button>
         </div>
-        <div id="endorsements" class="endorsements">
+        <div class="heading">
             <h4>- Endorsements -</h4>
-            <p>hi</p>
         </div>
+        <div id="endorsements" class="endorsements"></div>
     </div>
     <script src="script.js" type="module"></script>
 </body>
